Add payment code to vue. before controller refactoring

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -20,8 +20,11 @@
 
 <!--</head>-->
 <head th:replace="site-head :: site-head">
+
 </head>
 <body>
+    <div th:include="site-head :: csrf-token"></div>
+    <script th:include="site-head :: payment-codes"></script>
 
     <div id="app">
 
