--- a/src/main/resources/templates/users/login.html
+++ b/src/main/resources/templates/users/login.html
@@ -42,13 +42,13 @@
                 </div>
 
             </div>
-            <div class="row my-1">
-                <div class="col col-sm-5">
-                    <a href="/users/registration">Регистрация нового пользователя</a>
-                </div>
+            <!--<div class="row my-1">-->
+                <!--<div class="col col-sm-5">-->
+                    <!--<a href="/users/registration">Регистрация нового пользователя</a>-->
+                <!--</div>-->
 
 
-            </div>
+            <!--</div>-->
         </form>
     </div>
 
