--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -32,6 +32,7 @@
 
     <!--<script src="js/main.js"></script>-->
     <script src="http://localhost:8000/main.js"></script>
+    <script th:src="${isDevMode ? 'http://localhost:8000/main.js' : '/js/main.js'}"></script>
 
 </body>
 
