Add security principals to model

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -25,6 +25,7 @@
 <body>
     <div th:include="site-head :: csrf-token"></div>
     <script th:include="site-head :: payment-codes"></script>
+    <script th:include="site-head :: user-roles"></script>
 
     <div id="app">
 
