--- a/src/main/resources/templates/site-head.html
+++ b/src/main/resources/templates/site-head.html
@@ -32,6 +32,10 @@
     const paymentCodes = [[${paymentCodes}]];
 </script>
 
+<script th:fragment="user-roles" th:inline="javascript">
+    const userRoles = [[${userRoles}]];
+</script>
+
 <body>
 
 </body>
