--- a/src/main/resources/templates/admin-page.html
+++ b/src/main/resources/templates/admin-page.html
@@ -22,18 +22,23 @@
 <head th:replace="site-head :: site-head">
 
 </head>
-
 <body>
     <div th:include="site-head :: csrf-token"></div>
-    <script th:include="site-head :: payment-codes"></script>
-    <script th:include="site-head :: user-roles" th:inline="javascript"></script>
+    <!--<script th:include="site-head :: payment-codes"></script>-->
+    <!--<script th:include="site-head :: user-roles"></script>-->
+
+    <script th:inline="javascript">
+
+        const userRoles = /*[[${userRoles}]]*/ null;
+
+    </script>
 
     <div id="app">
 
     </div>
 
     <!--<script src="js/main.js"></script>-->
-    <!--<script src="http://localhost:8000/main.js"></script>-->
+    <script src="http://localhost:8000/main.js"></script>
     <script th:src="${isDevMode ? 'http://localhost:8000/main.js' : '/js/main.js'}"></script>
 
 </body>
