add redirect to details page

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -27,6 +27,8 @@
     <div th:include="site-head :: csrf-token"></div>
     <script th:include="site-head :: payment-codes"></script>
     <script th:include="site-head :: user-roles" th:inline="javascript"></script>
+    <script th:include="site-head :: developer-mode" th:inline="javascript"></script>
+    <script th:include="site-head :: stations" th:inline="javascript"></script>
 
     <div id="app">
 
