--- a/src/main/resources/templates/site-head.html
+++ b/src/main/resources/templates/site-head.html
@@ -3,7 +3,9 @@
 <head th:fragment="site-head">
 
     <title>Payment statistic</title>
+
     <link rel="icon" th:href="@{/static/img/favicon.ico}"/>
+    <link rel="stylesheet" th:href="@{/static/css/style_menu.css}"/>
 
     <!--Bootstrap-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
@@ -13,25 +15,17 @@
 
     <!--fav icons-->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
-    <!--&lt;!&ndash;TODO Вытянуть в отдельный элемент и не показывать в шаблоне логирования&ndash;&gt;-->
-    <!--&lt;!&ndash;csrf tokens&ndash;&gt;-->
-    <!--<meta th:name="_csrf" th:content="${_csrf.token}"/>-->
-    <!--<meta th:name="_csrf_header" th:content="${_csrf.headerName}"/>-->
-    <!--<script th:inline="javascript">-->
-        <!--const paymentCodes = [[${paymentCodes}]];-->
-    <!--</script>-->
 
 </head>
-
-<div th:fragment="csrf-token">
-    <meta th:name="_csrf" th:content="${_csrf.token}"/>
-    <meta th:name="_csrf_header" th:content="${_csrf.headerName}"/>
-</div>
-
 
 
 
 <body>
+
+    <div th:fragment="csrf-token">
+        <meta th:name="_csrf" th:content="${_csrf.token}"/>
+        <meta th:name="_csrf_header" th:content="${_csrf.headerName}"/>
+    </div>
     <script th:fragment="payment-codes" th:inline="javascript">
         const paymentCodes = [[${paymentCodes}]];
     </script>
