--- a/src/main/resources/templates/admin-page.html
+++ b/src/main/resources/templates/admin-page.html
@@ -1,45 +1,20 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<!--<head>-->
-    <!--<meta charset="UTF-8">-->
-    <!--<title>Payment statistic</title>-->
 
-
-    <!--&lt;!&ndash;Bootstrap&ndash;&gt;-->
-    <!--<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">-->
-    <!--<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>-->
-    <!--<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>-->
-    <!--<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>-->
-
-    <!--&lt;!&ndash;Icons&ndash;&gt;-->
-    <!--<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">-->
-    <!--&lt;!&ndash;<script src="https://code.jquery.com/jquery-3.3.1.js"></script>&ndash;&gt;-->
-    <!--&lt;!&ndash;<script src="https://cdn.datatables.net/1.10.20/js/jquery.dataTables.min.js"></script>&ndash;&gt;-->
-    <!--&lt;!&ndash;<script src="https://cdn.datatables.net/1.10.20/js/dataTables.bootstrap4.min.js"></script>&ndash;&gt;-->
-
-
-<!--</head>-->
 <head th:replace="site-head :: site-head">
 
 </head>
 <body>
     <div th:include="site-head :: csrf-token"></div>
     <!--<script th:include="site-head :: payment-codes"></script>-->
-    <!--<script th:include="site-head :: user-roles"></script>-->
+    <script th:include="site-head :: user-roles"></script>
 
     <script th:inline="javascript">
 
-        const userRoles = /*[[${userRoles}]]*/ null;
-
     </script>
 
-    <div id="app">
 
-    </div>
-
-    <!--<script src="js/main.js"></script>-->
-    <script src="http://localhost:8000/main.js"></script>
-    <script th:src="${isDevMode ? 'http://localhost:8000/main.js' : '/js/main.js'}"></script>
+    <!--<script th:src="${isDevMode ? 'http://localhost:8000/main.js' : '/js/payments.js'}"></script>-->
 
 </body>
 
