--- a/src/main/resources/templates/site-head.html
+++ b/src/main/resources/templates/site-head.html
@@ -4,8 +4,8 @@
 
     <title>Payment statistic</title>
 
-    <link rel="icon" th:href="@{/static/img/favicon.ico}"/>
-    <link rel="stylesheet" th:href="@{/static/css/style_menu.css}"/>
+    <link rel="icon" th:href="@{/img/favicon.ico}"/>
+    <link rel="stylesheet" th:href="@{/css/style_menu.css}"/>
 
     <!--Bootstrap-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
