add placeholder to loading page

--- a/src/main/resources/templates/site-head.html
+++ b/src/main/resources/templates/site-head.html
@@ -4,6 +4,8 @@
 
     <title>Payment statistic</title>
 
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <link rel="icon" th:href="@{/img/favicon.ico}"/>
     <link rel="stylesheet" th:href="@{/css/style_menu.css}"/>
 
