--- a/src/main/resources/templates/layouts/header.html
+++ b/src/main/resources/templates/layouts/header.html
@@ -3,9 +3,7 @@
 
 
     <nav class="navbar navbar-expand-lg fixed-top navbar-ligth bg-fadded" id="site-header" ref="site-header" >
-        <!--<a class="navbar-brand" th:href="@{/}">-->
-        <!--<img class="home-logo" alt="UTL-2" th:src="@{/img/site-logo.png}" height="60"/>-->
-        <!--</a>-->
+
 
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="true" aria-label="Toggle navigation">
@@ -25,6 +23,10 @@
 
                 <li class="nav-item">
                     <a class="nav-link waves-effect waves-light disable" th:href="@{/map}">Карта</a>
+                </li>
+
+                <li class="nav-item">
+                    <a class="nav-link waves-effect waves-light" th:href="@{/test}">Test</a>
                 </li>
 
                 <li class="nav-item" sec:authorize="hasRole('ROLE_ADMIN')">
