add uploaded documents table

--- a/src/main/resources/templates/rail-doc-page.html
+++ b/src/main/resources/templates/rail-doc-page.html
@@ -10,6 +10,8 @@
 
     <div th:include="site-head :: csrf-token"></div>
 
+    <script th:include="site-head :: user-roles" th:inline="javascript"></script>
+
     <script th:include="site-head :: developer-mode" th:inline="javascript"></script>
 
     <div id="documents-page">
