--- a/src/main/resources/static/css/style_menu.css
+++ b/src/main/resources/static/css/style_menu.css
@@ -3,7 +3,7 @@
 #headerMain {
     width:100%;
     height: 100px;
-    margin:0px auto;
+    margin:0 auto;
     padding-bottom: 40px;
     z-index:0;
 }
