add station input to modal request form

--- a/src/main/resources/templates/rail-doc-page.html
+++ b/src/main/resources/templates/rail-doc-page.html
@@ -14,6 +14,8 @@
 
     <script th:include="site-head :: developer-mode" th:inline="javascript"></script>
 
+    <script th:include="site-head :: stations" th:inline="javascript"></script>
+
     <div id="documents-page">
 
     </div>
