Fix deployment script

--- a/src/main/resources/templates/rail-doc-page.html
+++ b/src/main/resources/templates/rail-doc-page.html
@@ -20,7 +20,7 @@
 
     </div>
 
-    <script th:src="${isDevMode ? 'http://localhost:8000/documents.js' : '/js/payments.documents.js'}"></script>
+    <script th:src="${isDevMode ? 'http://localhost:8000/documents.js' : '/js/documents.bungle.js'}"></script>
 
 </body>
 </html>
