--- a/src/main/resources/js/css/vue-toastification/index.css
+++ b/src/main/resources/js/css/vue-toastification/index.css
@@ -93,7 +93,7 @@
     color: #fff;
 }
 .Vue-Toastification__toast--info {
-    background-color: #76a7a7eb;
+    background-color: rgba(118, 167, 167, 0.95);
     color: #fff;
 }
 .Vue-Toastification__toast--success {
