change main page to railroad documents

--- a/src/main/resources/templates/layouts/header.html
+++ b/src/main/resources/templates/layouts/header.html
@@ -15,11 +15,13 @@
             <ul class="navbar-nav mr-auto">
 
                 <li class="nav-item">
-                    <a class="nav-link waves-effect waves-light" th:href="@{/}">Списания</a>
+                    <a class="nav-link waves-effect waves-light" th:href="@{/}">ЖД накладные</a>
                 </li>
+
                 <li class="nav-item">
-                    <a class="nav-link waves-effect waves-light" th:href="@{/railroad-documents}">ЖД накладные</a>
+                    <a class="nav-link waves-effect waves-light" th:href="@{/payment-statistic}">Списания</a>
                 </li>
+
 
                 <li class="nav-item">
                     <a class="nav-link waves-effect waves-light disable" th:href="@{/map}">Карта</a>
