--- a/src/main/resources/js/css/railroad-documents/tables-style.css
+++ b/src/main/resources/js/css/railroad-documents/tables-style.css
@@ -41,6 +41,20 @@ td:hover{
     font-weight: 500;
 }
 
+.show-on-hover{
+    display: none;
+}
+td:hover .show-on-hover{
+    display: inline-block;
+    color: darkslategray;
+}
+.link-button{
+    padding: .1rem .35rem;
+    font-size: .7rem;
+    line-height: 1.5;
+    border-radius: 50%!important;
+}
+
 
 
 
