change sidebar style

--- a/src/main/resources/js/css/sidebar_style.css
+++ b/src/main/resources/js/css/sidebar_style.css
@@ -30,7 +30,7 @@
 }
 
 
-.dropdown-item.active, .dropdown-item:active {
+#sidebar .dropdown-item.active, .dropdown-item:active {
     color: #fff;
     text-decoration: none;
     background-color: #999799;
