--- a/src/main/resources/templates/rail-doc-page.html
+++ b/src/main/resources/templates/rail-doc-page.html
@@ -19,8 +19,10 @@
     <div id="documents-page">
 
     </div>
-
+    <script th:src="${isDevMode ? 'http://localhost:8000/core-js.js' : '/js/core-js.bungle.js'}"></script>
+    <script th:src="${isDevMode ? 'http://localhost:8000/vuelib.js' : '/js/vuelib.bungle.js'}"></script>
     <script th:src="${isDevMode ? 'http://localhost:8000/documents.js' : '/js/documents.bungle.js'}"></script>
+
 
 </body>
 </html>
