--- a/src/main/resources/js/css/mainbar_style.css
+++ b/src/main/resources/js/css/mainbar_style.css
@@ -14,6 +14,7 @@
     min-height: 100vh;
     transition: all 0.3s;
     overflow: hidden;
+    min-width: 600px;
 }
 .router-container {
     padding: 5px 15px 5px 45px;
